Attempt 2 using SIMD