@@ -29,10 +29,10 @@ get_system_info() {
 }
 
 determine_optimal_settings() {
-  MAX_HEAP_SIZE=$(echo "scale=0; ($total_memory * .99) / 1" | bc)M
+  MAX_HEAP_SIZE=$(echo "scale=0; ($total_memory * .95) / 1" | bc)M
   MIN_HEAP_SIZE=$MAX_HEAP_SIZE
 
-  JAVA_OPTS="--enable-preview -Xms$MIN_HEAP_SIZE -Xmx$MAX_HEAP_SIZE $GC_TYPE"
+  JAVA_OPTS="--enable-preview -Xms$MIN_HEAP_SIZE -Xmx$MAX_HEAP_SIZE $GC_TYPE --add-modules jdk.incubator.vector"
 }
 
 get_system_info
